# tokyo-foreign-population-spatial-analysis

./: .geminiignore  .gitignore  GEMINI.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
data/: data_sources.md
docs/: baseline_snapshot.md  new_chat_handoff.md  paper_questions.md  project_brief_en.md  refactor_status.md  results_log.md  tokyo_dual_track_board.md  variable_log.md
notebooks/: 00_project_setup.ipynb  01_boundary_processing.ipynb  02_population_merge.ipynb  03_station_accessibility.ipynb  04_exploratory_analysis.ipynb  05_land_price_processing.ipynb  06_baseline_ols.ipynb  07_spatial_residual_diagnostics.ipynb  08_mgwr_analysis.ipynb  09_extended_ols_variable_prep.ipynb  11_prediction_target_design.ipynb
outputs/round_09_extended_ols/: extended_ols_summary.txt
outputs/round_11_target_audit/: target_audit_summary.txt
src/tokyo_foreigners/: boundaries.py  land_price.py  mgwr.py  ols.py  paths.py  spatial_diagnostics.py  station_accessibility.py
tests/: test_boundaries.py  test_land_price.py  test_ols.py  test_paths.py  test_station_accessibility.py
