[project]
name = "tokyo-foreign-population-spatial-analysis"
version = "0.1.0"
description = "Notebook-centered geospatial analysis workflow for Tokyo foreign population spatial analysis."
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "esda>=2.9.0",
    "geopandas>=1.1.3",
    "jupyter>=1.1.1",
    "libpysal>=4.14.1",
    "matplotlib>=3.10.8",
    "mgwr>=2.2.1",
    "numpy>=2.4.4",
    "openpyxl>=3.1.5",
    "pandas>=3.0.2",
    "scikit-learn>=1.8.0",
    "statsmodels>=0.14.6",
]

[dependency-groups]
dev = [
  "jupyterlab",
  "ipykernel",
  "ruff>=0.15.10",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-q"

[tool.ruff]
target-version = "py312"
line-length = 100
extend-exclude = [
  ".venv",
  "data",
  "data_raw",
  "data_processed",
  "outputs",
  "notebooks",
]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
